add degree-rad converter, modified NavigationAction
